@@ -27,9 +27,9 @@ import org.fudgemsg.mapping.FudgeObjectDictionary;
 import org.fudgemsg.mapping.FudgeObjectReader;
 import org.fudgemsg.mapping.FudgeObjectWriter;
 import org.fudgemsg.mapping.FudgeSerializationContext;
-import org.fudgemsg.taxon.FudgeTaxonomy;
-import org.fudgemsg.taxon.ImmutableMapTaxonomyResolver;
-import org.fudgemsg.taxon.TaxonomyResolver;
+import org.fudgemsg.taxonomy.FudgeTaxonomy;
+import org.fudgemsg.taxonomy.ImmutableMapTaxonomyResolver;
+import org.fudgemsg.taxonomy.TaxonomyResolver;
 import org.fudgemsg.wire.FudgeDataInputStreamReader;
 import org.fudgemsg.wire.FudgeDataOutputStreamWriter;
 import org.fudgemsg.wire.FudgeMsgReader;
