@@ -13,7 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package org.fudgemsg.taxon;
+package org.fudgemsg.taxonomy;
 
 import java.io.IOException;
 import java.io.InputStream;
