@@ -26,9 +26,9 @@ import java.util.Map;
 import org.fudgemsg.FudgeContext;
 import org.fudgemsg.FudgeMsg;
 import org.fudgemsg.StandardFudgeMessages;
-import org.fudgemsg.taxon.FudgeTaxonomy;
-import org.fudgemsg.taxon.ImmutableMapTaxonomyResolver;
-import org.fudgemsg.taxon.MapFudgeTaxonomy;
+import org.fudgemsg.taxonomy.FudgeTaxonomy;
+import org.fudgemsg.taxonomy.ImmutableMapTaxonomyResolver;
+import org.fudgemsg.taxonomy.MapFudgeTaxonomy;
 import org.fudgemsg.wire.json.FudgeJSONStreamReader;
 import org.fudgemsg.wire.json.FudgeJSONStreamWriter;
 import org.junit.Test;
