@@ -27,9 +27,9 @@ import java.util.Map;
 import org.fudgemsg.FudgeContext;
 import org.fudgemsg.FudgeMsg;
 import org.fudgemsg.StandardFudgeMessages;
-import org.fudgemsg.taxon.FudgeTaxonomy;
-import org.fudgemsg.taxon.ImmutableMapTaxonomyResolver;
-import org.fudgemsg.taxon.MapFudgeTaxonomy;
+import org.fudgemsg.taxonomy.FudgeTaxonomy;
+import org.fudgemsg.taxonomy.ImmutableMapTaxonomyResolver;
+import org.fudgemsg.taxonomy.MapFudgeTaxonomy;
 import org.fudgemsg.wire.FudgeMsgReader;
 import org.fudgemsg.wire.FudgeMsgWriter;
 import org.fudgemsg.wire.xml.FudgeXMLStreamReader;
